force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>subscription details of each vehicle</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SUB-{0000000000}</displayFormat>
        <label>Subscription Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>