force-app/main/default/objects/Subscription__c/fields/Subscription_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_date__c</fullName>
    <inlineHelpText>enter the start date of subscription</inlineHelpText>
    <label>Subscription Start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>