force-app/main/default/objects/Subscription__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <label>Subscription Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
                <default>true</default>
                <label>1 Month</label>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>1 Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>