force-app/main/default/objects/Subscription__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <label>Vehicle Number</label>
    <referenceTo>Customer_Vehicle_Info__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>